<resources>
    <string name="app_name">StyleToast</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="logo">Logo</string>
    <string name="curiousaps_gmail_com">curiousaps@gmail.com</string>
    <string name="version">Version 1.1.0\n Release 10.02.18</string>
    <string name="phone_number">903.372.0127</string>
    <string name="created">Created By Enoch for android</string>

</resources>
