<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/lightning"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/curious_3"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"/>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="curiousca.com "-->
    <!--android:textSize="32sp"-->
    <!--android:id="@+id/textView2"-->
    <!--android:layout_below="@+id/imageView"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="50dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curiousaps_gmail_com"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/version"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>